# rust-hands-on-projects

./: Cargo.toml
actor/: Cargo.toml
crates_hands_on/axum/: Cargo.toml
crates_hands_on/axum/examples/: basic.rs
crates_hands_on/axum/my-axum-app/: package-lock.json  package.json
event_encoder/: Cargo.toml
event_encoder/src/: encoder.rs
fibonacci/src/: fibonacci.rs
museum-arii/: Cargo.toml
museum-arii/src/: ticket.rs
rust-io-file-serde/: Cargo.toml
rust-io-file-serde/src/: user.rs
strtok/src/: strtok.rs
