[package]
name = "axum_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["headers"] }
hyper = { version = "0.14.22", features = ["full"] }
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.1"
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "8" 
rust-embed = "6"